# Door-access-control

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README1.md  THIRD_PARTY_NOTICES.md  buzzer.cpp  buzzer.h  mag-cards_allowlist.txt  sim_nfc  sim_nfc.cpp  simulate nfc test.cpp
.github/workflows/: cmake-single-platform.yml  cmake.yml
build-training/: CMakeCache.txt  Makefile  cmake_install.cmake  train_faces
docs/: AI_USAGE_STATEMENT.md  testing.md
include/AuthResult/: AuthResult.hpp
include/BUZZER/: buzzer.hpp
include/Camera/: camera-stream.hpp
include/EVENT/: event-bus.hpp
include/FACE/: face-verifier.hpp
include/GPIO/: gpio-line.hpp
include/LED/: led-v1.hpp
include/Magnetic-reader/: Magnetic-reader.hpp
include/RIsk/: risk-policy.hpp
include/SERVO/: servo-lock.hpp
include/Telemetry/: auth-trace.hpp
include/verifier/: verifier.hpp
models/: face_labels.txt  lbph_faces.yml
src/: AccessLogger  main.cpp
src/BUZZER/: buzzer.cpp
src/Camera/: camera-stream.cpp
src/EVENT-BUS/: event-bus.cpp
src/FACE/: face-verifier.cpp
src/GPIO/: gpio-line.cpp
src/LED/: led-gpio-line.cpp  led-logic-v1.cpp
src/Magnetic-reader/: Magnetic-reader.cpp
src/Risk/: risk-policy.cpp
src/SERVO/: servo-lock.cpp
src/verifier/: verifier.cpp
tests/: CMakeLists.txt  test_card_verifier.cpp  test_event_bus.cpp
training/: CMakeLists.txt  train_faces.cpp
